Chapter08/example/users_backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: users-backend
    labels:
        app: users-backend
    namespace: example
spec:
    replicas: 1
    selector:
        matchLabels:
            app: users-backend
    template:
        metadata:
            labels:
                app: users-backend
        spec:
            containers:
                - name: users-backend-service
                  image: likeclem30/users_server:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 8000
                - name: users-backend-db
                  image: likeclem30/users_backend_db:latest
                  imagePullPolicy: Never
