Chapter08/example/users_backend/ingress.yaml
---
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: users-backend-ingress
    namespace: example
spec:
    rules:
        - host: users.example.local
          http:
            paths:
              - backend:
                  serviceName: users-service
                  servicePort: 80
                path: /
